# Starry

./: Cargo.toml  README.md
src/: component.rs  lib.rs  resources.rs  systems.rs  thread_manager.rs
tests/: components.rs  parallelized.rs  resource.rs  system_ordering.rs
