[package]
name = "starry-ecs"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A crude ECS system"
repository = "https://github.com/lemonjamesd/starry"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.14"
parking_lot = "0.12.1"
